# comp3011-cw1

./: .gitignore  AzuriteConfig  LICENSE  README-bak.md  README.md  Test.txt  __azurite_db_table__.json  requirements.txt
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: efab3558e41d_init_locations_and_observations.py
backend/src/: main.py
backend/src/api/: router.py
backend/src/contexts/analytics/api/: router.py  schemas.py
backend/src/contexts/analytics/app/: services.py
backend/src/contexts/analytics/domain/: entities.py  repositories.py
backend/src/contexts/analytics/infra/: repo.py
backend/src/contexts/cities/application/: dtos.py
backend/src/contexts/cities/domain/: entities.py  repositories.py
backend/src/contexts/cities/infrastructure/: repositories.py
backend/src/contexts/cities/interface/: router.py  schemas.py
backend/src/contexts/home/api/: router.py  schemas.py
backend/src/contexts/home/app/: services.py
backend/src/contexts/locations/api/: router.py  schemas.py
backend/src/contexts/locations/app/: seed.py  services.py
backend/src/contexts/locations/domain/: entities.py  repositories.py
backend/src/contexts/locations/infra/: orm.py  owm_geocoding_client.py  repo.py  seed_repo.py
backend/src/contexts/observations/api/: router.py
backend/src/contexts/observations/app/: services.py
backend/src/shared/: config.py  di.py  exceptions.py
backend/src/shared/db/: base.py  session.py
backend/tests/: test_health.py
docs/: architecture.md
(+24 files in other folders)
